fix: add left margin to office in open positions for spacing

--- a/src/sections/open-positions/styles.module.scss
+++ b/src/sections/open-positions/styles.module.scss
@@ -77,4 +77,8 @@
 
 .office {
   color: var(--color-medium-grey);
+
+  @include mq("tablet") {
+    margin-left: 40px;
+  }
 }
